--- a/.github/workflows/workflow-linter.yml
+++ b/.github/workflows/workflow-linter.yml
@@ -104,12 +104,18 @@ jobs:
 
               if content:
                   if 'name' not in content:
-                      filename = os.path.basename(file_path).replace('.yml', '').replace('.yaml', '').replace('-', ' ').replace('_', ' ').title()
+                      basename = os.path.basename(file_path)
+                      filename = (basename.replace('.yml', '')
+                                         .replace('.yaml', '')
+                                         .replace('-', ' ')
+                                         .replace('_', ' ')
+                                         .title())
                       content['name'] = filename
                       print(f"  ✅ Added missing 'name' field: {filename}")
 
                   with open(file_path, 'w') as f:
-                      yaml.dump(content, f, default_flow_style=False, sort_keys=False, width=120, allow_unicode=True)
+                      yaml.dump(content, f, default_flow_style=False,
+                                sort_keys=False, width=120, allow_unicode=True)
 
                   print(f"  ✅ Auto-formatted: {file_path}")
 
@@ -171,7 +177,8 @@ jobs:
                           VALIDATED += 1
                           print(f"  ✅ {file}")
                       except ValidationError as e:
-                          error_path = '.'.join(str(p) for p in e.path) if e.path else 'root'
+                          error_path = ('.'.join(str(p) for p in e.path)
+                                       if e.path else 'root')
                           ERRORS.append(f"{file}: {e.message} (at: {error_path})")
 
                   except yaml.YAMLError as e:
@@ -219,22 +226,28 @@ jobs:
 
                       for field in REQUIRED_FIELDS:
                           if field not in content:
-                              ERRORS.append(f"{file}: Missing required field '{field}'")
+                              msg = f"{file}: Missing required field '{field}'"
+                              ERRORS.append(msg)
 
                       if 'jobs' in content:
-                          if not isinstance(content['jobs'], dict) or len(content['jobs']) == 0:
-                              ERRORS.append(f"{file}: 'jobs' must be a non-empty dictionary")
+                          jobs = content['jobs']
+                          if not isinstance(jobs, dict) or len(jobs) == 0:
+                              msg = f"{file}: 'jobs' must be a non-empty dictionary"
+                              ERRORS.append(msg)
                           else:
-                              for job_name, job_config in content['jobs'].items():
+                              for job_name, job_config in jobs.items():
                                   if not isinstance(job_config, dict):
-                                      ERRORS.append(f"{file}: Job '{job_name}' must be a dictionary")
+                                      msg = f"{file}: Job '{job_name}' must be a dict"
+                                      ERRORS.append(msg)
                                       continue
 
                                   if 'runs-on' not in job_config:
-                                      ERRORS.append(f"{file}: Job '{job_name}' missing 'runs-on'")
+                                      msg = f"{file}: Job '{job_name}' missing 'runs-on'"
+                                      ERRORS.append(msg)
 
                                   if 'steps' not in job_config:
-                                      WARNINGS.append(f"{file}: Job '{job_name}' has no steps defined")
+                                      msg = f"{file}: Job '{job_name}' has no steps"
+                                      WARNINGS.append(msg)
 
                       if 'on' in content:
                           on_value = content['on']
@@ -256,13 +269,17 @@ jobs:
               print("\n💡 SUGGESTED FIXES:")
               for error in ERRORS:
                   if "Missing required field 'name'" in error:
-                      print(f"  • {error}: Add 'name: \"Workflow Name\"' at the top")
+                      fix = f"  • {error}: Add 'name: \"Workflow Name\"' at the top"
+                      print(fix)
                   elif "Missing required field 'on'" in error:
-                      print(f"  • {error}: Add triggers like 'on: [push]' or 'on: workflow_dispatch:'")
+                      fix = f"  • {error}: Add triggers like 'on: [push]'"
+                      print(fix)
                   elif "Missing required field 'jobs'" in error:
-                      print(f"  • {error}: Add 'jobs:' section with at least one job")
+                      fix = f"  • {error}: Add 'jobs:' section with at least one job"
+                      print(fix)
                   elif "missing 'runs-on'" in error:
-                      print(f"  • {error}: Add 'runs-on: ubuntu-latest' to the job")
+                      fix = f"  • {error}: Add 'runs-on: ubuntu-latest' to the job"
+                      print(fix)
 
               sys.exit(1)
           else:
@@ -434,15 +451,18 @@ jobs:
           script: |
             const fs = require('fs');
             let suggestions = '## ⚠️ Workflow Validation Failed\n\n';
-            suggestions += '**Auto-fixes are not enabled for fork PRs for security reasons.**\n\n';
+            suggestions += '**Auto-fixes are not enabled for fork PRs for ';
+            suggestions += 'security reasons.**\n\n';
             try {
               const fixContent = fs.readFileSync('fix_suggestions.md', 'utf8');
               suggestions += fixContent;
             } catch (e) {
-              suggestions += 'Some workflow files have validation issues. Check the workflow run for details.\n';
+              suggestions += 'Some workflow files have validation issues. ';
+              suggestions += 'Check the workflow run for details.\n';
             }
             suggestions += '\n\n---\n';
-            suggestions += '💡 **Tip**: Download the `fix-suggestions` artifact from the workflow run for detailed guidance.';
+            suggestions += '💡 **Tip**: Download the `fix-suggestions` artifact ';
+            suggestions += 'from the workflow run for detailed guidance.';
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
