--- a/.github/workflows/visuals-extraction-citation.yml
+++ b/.github/workflows/visuals-extraction-citation.yml
@@ -13,53 +13,71 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install dependencies
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'  # or '3.12' — pdfplumber supports >=3.8
+
+      - name: Install Python dependencies
         run: |
-          npm install markdown-it pdf-parse mermaid.cli
+          python -m pip install --upgrade pip
+          pip install pdfplumber markdown-it-py
+
+      - name: Install Node.js dependencies (for mermaid.cli if needed later)
+        run: npm install -g @mermaid-js/mermaid-cli
 
       - name: Scan and Generate Mermaid
         run: |
-          # Python script to process files (example logic)
-          python -c "
+          python - <<EOF
           import os
-          import pdfplumber  # For PDFs
+          import pdfplumber
           from markdown_it import MarkdownIt
-          
+
           def add_mermaid(file_path):
               if file_path.endswith('.md'):
-                  with open(file_path, 'r') as f:
+                  with open(file_path, 'r', encoding='utf-8') as f:
                       content = f.read()
-                  md = MarkdownIt().parse(content)
-                  # Extract tables/structures (simplified: find markdown tables)
-                  has_table = '|' in content  # Basic detection
+                  md = MarkdownIt()
+                  # Basic table detection (improve as needed)
+                  has_table = '|' in content and content.count('|') > 5
                   if has_table:
-                      # Convert table to pie chart example
-                      mermaid = 'pie title Example Table Data\n\"Category1\": 40\n\"Category2\": 60'
+                      # Simple placeholder conversion — customize per your tables
+                      mermaid = 'graph TD\n    A[Table Detected] --> B[Data]\n    B --> C[Visualized]'
                   else:
-                      mermaid = 'graph TD\nA[File Structure] --> B[Headers]\nB --> C[Subsections]'
-                  citation = '\n\n```mermaid\n' + mermaid + '\n```\n\n*By Sheldon K Salmon - Source: https://github.com/AionSystem/AION-BRAIN*'
-                  with open(file_path, 'a') as f:
+                      # Basic file structure diagram
+                      mermaid = 'graph TD\n    Root[File] --> Headers[Headers]\n    Headers --> Subsections[Content]'
+
+                  citation = f"""\n\n```mermaid\n{mermaid}\n```\n\n*By Sheldon K Salmon - Source: https://github.com/AionSystem/AION-BRAIN*"""
+                  with open(file_path, 'a', encoding='utf-8') as f:
                       f.write(citation)
-              elif file_path.endswith('.pdf'):
-                  with pdfplumber.open(file_path) as pdf:
-                      # Extract tables from PDF
-                      for page in pdf.pages:
-                          tables = page.extract_tables()
-                          if tables:
-                              # Convert first table to bar chart
-                              mermaid = 'graph LR\nA[Col1] -->|Value| B(Row1)'
-                              # Append to a new MD file in visuals/
-                              os.makedirs('visuals', exist_ok=True)
-                              with open(f'visuals/{os.path.basename(file_path)}.md', 'w') as f:
-                                  f.write('```mermaid\n' + mermaid + '\n```\n\n*By Sheldon K Salmon - Source: https://github.com/AionSystem/AION-BRAIN*')
-          
+                  print(f"Processed MD: {file_path}")
+
+              elif file_path.lower().endswith('.pdf'):
+                  try:
+                      with pdfplumber.open(file_path) as pdf:
+                          for i, page in enumerate(pdf.pages):
+                              tables = page.extract_tables()
+                              if tables:
+                                  # Basic conversion — improve for real table-to-chart
+                                  mermaid = 'graph LR\n    Col1[Column1] --> Val1[Value]'
+                                  out_path = f"visuals/{os.path.basename(file_path)}_page{i+1}.md"
+                                  os.makedirs('visuals', exist_ok=True)
+                                  with open(out_path, 'w', encoding='utf-8') as f:
+                                      f.write(f"```mermaid\n{mermaid}\n```\n\n*By Sheldon K Salmon - Source: https://github.com/AionSystem/AION-BRAIN*")
+                                  print(f"Generated from PDF table: {out_path}")
+                              else:
+                                  print(f"No tables in PDF page {i+1} of {file_path}")
+                  except Exception as e:
+                      print(f"PDF processing error {file_path}: {e}")
+
           for root, _, files in os.walk('.'):
               for file in files:
-                  if file.endswith(('.md', '.pdf')):
+                  if file.endswith(('.md', '.pdf')) and not file.startswith('.'):
                       add_mermaid(os.path.join(root, file))
-          "
+          EOF
 
       - name: Commit Visual Updates
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Auto-generated Mermaid visuals with citations"
+          commit_message: "Auto-generated Mermaid visuals with citations [ci skip]"
+          file_pattern: "*.md visuals/*.md"
