--- a/.github/workflows/epistemic-validation-audit.yml
+++ b/.github/workflows/epistemic-validation-audit.yml
@@ -11,20 +11,33 @@ jobs:
   audit-patterns:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository (full history)
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Full history for diff
+          fetch-depth: 0
 
-      - name: Get changed files
+      - name: Get changed documentation files
         id: changed-files
         run: |
-          CHANGED_FILES=$(git diff --name-only ${{ github.event.before || 'HEAD^' }} \( {{ github.sha }} | grep -E '\.(md|pdf|yaml|yml|txt) \)' | tr '\n' ' ')
+          # For push events: diff between before and current SHA
+          # For PR: github.sha is merge commit or last commit; before is target branch tip
+          BEFORE_SHA="${{ github.event.before || 'HEAD^' }}"
+          CURRENT_SHA="${{ github.sha }}"
+
+          echo "Comparing $BEFORE_SHA → $CURRENT_SHA"
+
+          CHANGED_FILES=$(git diff --name-only "$BEFORE_SHA" "\( CURRENT_SHA" | grep -E "\.(md|pdf|yaml|yml|txt) \)" | tr '\n' ' ' || true)
+
           echo "changed_files=$CHANGED_FILES" >> $GITHUB_OUTPUT
+
           if [ -z "$CHANGED_FILES" ]; then
-            echo "No documentation files changed — skipping deep audit."
+            echo "No relevant documentation files changed — skipping audit."
+            exit 0
+          else
+            echo "Changed files to audit: $CHANGED_FILES"
           fi
 
-      - name: Install utilities
+      - name: Install required utilities
         run: |
           sudo apt update
           sudo apt install -y pandoc jq grep bc
@@ -32,6 +45,7 @@ jobs:
       - name: Perform Epistemic Audit (FSVE/GENESIS Principle Check)
         run: |
           CHANGED="${{ steps.changed-files.outputs.changed_files }}"
+
           if [ -z "$CHANGED" ]; then
             echo "No files to audit."
             exit 0
@@ -41,23 +55,35 @@ jobs:
           echo "Date: $(date -u '+%Y-%m-%d %H:%M:%S UTC')" >> audit_report.txt
           echo "" >> audit_report.txt
 
-          # Core principle presence check (expand with more patterns)
-          echo "## Principle Presence Check" >> audit_report.txt
-          grep -i -l -r -E "Uncertainty Is Conserved|No Free Certainty|Pattern Legitimacy Precedes Performance|Composition Compounds Uncertainty|No Phantom Patterns|Algorithmic Explainability Is Required|Translation Requires Causal Equivalence" . >> audit_report.txt 2>/dev/null || echo "⚠️ No core principle references found in changed files." >> audit_report.txt
+          echo "## Principle Presence Check (in changed files)" >> audit_report.txt
+          FOUND=false
+          for file in $CHANGED; do
+            if grep -i -E "Uncertainty Is Conserved|No Free Certainty|Pattern Legitimacy Precedes Performance|Composition Compounds Uncertainty|No Phantom Patterns|Algorithmic Explainability Is Required|Translation Requires Causal Equivalence" "$file" >> audit_report.txt 2>/dev/null; then
+              echo "Found in $file" >> audit_report.txt
+              FOUND=true
+            fi
+          done
+
+          if ! $FOUND; then
+            echo "⚠️ No core principle references found in changed files." >> audit_report.txt
+          fi
           echo "" >> audit_report.txt
 
-          # Very basic legitimacy score simulation (0-1 scale)
-          PRINCIPLE_COUNT=$(grep -r -i -E "Uncertainty|Legitimacy|Phantom|Explainability|Causal" . | wc -l)
+          # Basic legitimacy score heuristic (only on changed files)
+          echo "## Estimated Pattern Legitimacy Score (PLS)" >> audit_report.txt
+          PRINCIPLE_COUNT=$(grep -i -E "Uncertainty|Legitimacy|Phantom|Explainability|Causal" $CHANGED 2>/dev/null | wc -l || echo 0)
           FILE_COUNT=$(echo "$CHANGED" | wc -w)
-          if [ $FILE_COUNT -gt 0 ]; then
-            PLS=$(echo "scale=2; $PRINCIPLE_COUNT / ($FILE_COUNT * 5)" | bc)  # Rough heuristic: 5 expected refs per file
+
+          if [ "$FILE_COUNT" -gt 0 ]; then
+            PLS=$(echo "scale=2; $PRINCIPLE_COUNT / ($FILE_COUNT * 5)" | bc)
             PLS=$(echo "if($PLS > 1) 1 else $PLS" | bc)
           else
             PLS=0.00
           fi
 
-          echo "## Estimated Pattern Legitimacy Score (PLS)" >> audit_report.txt
           echo "Basic heuristic PLS: $PLS (0.00–1.00)" >> audit_report.txt
+          echo "(Rough: \~5 expected principle refs per file)" >> audit_report.txt
+
           if (( $(echo "$PLS < 0.40" | bc -l) )); then
             echo "::error file=audit_report.txt::Low legitimacy score ($PLS) — potential FSVE/GENESIS violation. Review for uncertainty conservation and structural honesty." >> $GITHUB_STEP_SUMMARY
             echo "FAIL: PLS too low ($PLS < 0.40)" >> audit_report.txt
@@ -67,7 +93,7 @@ jobs:
           fi
 
           echo "" >> audit_report.txt
-          echo "*Audit based on basic pattern matching. For full LLM-powered scoring, configure API key and expand step.*" >> audit_report.txt
+          echo "*Audit uses basic keyword matching on changed files only. For advanced LLM scoring, add API integration.*" >> audit_report.txt
 
       - name: Upload Audit Report
         if: always()
@@ -76,7 +102,7 @@ jobs:
           name: epistemic-audit-report
           path: audit_report.txt
 
-      - name: Comment on PR if Failed
+      - name: Comment on PR if Audit Failed
         if: failure() && github.event_name == 'pull_request'
         uses: actions/github-script@v7
         with:
@@ -85,5 +111,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '⚠️ Epistemic audit failed: Low PLS or missing core principles (Uncertainty conserved, No free certainty, etc.). Review changed docs for FSVE/GENESIS compliance. See artifact: epistemic-audit-report'
+              body: '⚠️ Epistemic audit failed: Low PLS or missing core principles (e.g., Uncertainty conserved, No free certainty). Review changed docs for FSVE/GENESIS compliance. See attached artifact: epistemic-audit-report'
             })
