--- a/.github/workflows/frameworks-integrity-sync.yml
+++ b/.github/workflows/frameworks-integrity-sync.yml
@@ -13,25 +13,40 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install tools
+      - name: Install tools (latest Pandoc + markdownlint)
         run: |
-          sudo apt update
-          sudo apt install pandoc -y
+          # Install latest Pandoc 3.9 via official deb (avoids apt repo problems)
+          PANDOC_VERSION="3.9"
+          wget "https://github.com/jgm/pandoc/releases/download/\( {PANDOC_VERSION}/pandoc- \){PANDOC_VERSION}-amd64.deb"
+          sudo dpkg -i "pandoc-${PANDOC_VERSION}-amd64.deb" || sudo apt-get install -f -y
+          rm "pandoc-${PANDOC_VERSION}-amd64.deb"
+          pandoc --version  # Should print pandoc 3.9.x — debug output
+
+          # Install latest markdownlint-cli
           npm install -g markdownlint-cli
+          markdownlint --version  # Debug
 
       - name: Convert non-MD to Markdown & Lint
         run: |
-          find frameworks -type f ! -name "*.md" | while read -r file; do
+          echo "Starting conversion and linting in frameworks/..."
+
+          # Convert PDFs to MD (only if file matches .pdf)
+          find frameworks -type f ! -name ".*" | while read -r file; do
             if [[ "\( file" =\~ \.pdf \) ]]; then
               output="${file%.pdf}.md"
-              pandoc "$file" -o "$output" --wrap=none
-              echo "Converted $file → $output"
-              rm "$file"  # Optional: remove original PDF after conversion
+              echo "Converting PDF: $file → $output"
+              pandoc "$file" -o "$output" --wrap=preserve --markdown-headings=atx || {
+                echo "Pandoc conversion failed for $file — skipping removal"
+                continue
+              }
+              echo "Conversion successful: $output"
+              rm "$file"  # Optional: remove original PDF (comment out if you want to keep backups)
             fi
           done
 
-          # Lint all MD files in frameworks/
-          find frameworks -name "*.md" -exec markdownlint --fix {} \;
+          # Lint & auto-fix all MD files in frameworks/
+          echo "Linting Markdown files..."
+          find frameworks -type f -name "*.md" ! -name ".*" -exec markdownlint --fix {} \;
           echo "Markdown linting & auto-fixing complete."
 
       - name: Scan Frameworks and Update README
